--- a/index.Rmd
+++ b/index.Rmd
@@ -1828,8 +1828,9 @@ library(RCurl)
 
 ```
 DF = read.table(sep=",", header=TRUE,            
-file= 
-textConnection(getURL("https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv")))
+file= textConnection(
+getURL("https://raw.githubusercontent.com/ntuaha/TWFS/master/db/cl_info_other.csv")
+))
 ```
 
 
